--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -41,7 +41,7 @@
   <body class="socialine-atsakomybe">
     <!-- Navigation -->
     <header>
-        <a href="landing.html" class="logo">
+        <a href="landing.html" class="logo next-page-link">
           <img src="/tvarumas/Acme_logo_tamsiai_melyna.svg" alt="">
         </a>
         <div class="right">
@@ -274,7 +274,7 @@
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
@@ -282,22 +282,14 @@
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
-                <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
-              </a>
-            </div>
-
-            <div class="project">
-              <h3 class="project-title">Projekto pavadinimas</h3>
-              <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
@@ -305,7 +297,15 @@
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
+                <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
+              </a>
+            </div>
+
+            <div class="project">
+              <h3 class="project-title">Projekto pavadinimas</h3>
+              <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
@@ -325,7 +325,7 @@
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
@@ -333,7 +333,7 @@
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
@@ -341,22 +341,14 @@
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
-                <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
-              </a>
-            </div>
-
-            <div class="project">
-              <h3 class="project-title">Projekto pavadinimas</h3>
-              <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
@@ -364,7 +356,15 @@
             <div class="project">
               <h3 class="project-title">Projekto pavadinimas</h3>
               <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
-              <a class="project-link" href="#">
+              <a class="project-link next-page-link" href="#">
+                <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
+              </a>
+            </div>
+
+            <div class="project">
+              <h3 class="project-title">Projekto pavadinimas</h3>
+              <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ullam eos asperiores dolorem nam ipsa esse unde reprehenderit dolor corrupti quidem veniam veritatis aspernatur tempora, repellat amet delectus? Provident, reiciendis.</p>
+              <a class="project-link next-page-link" href="#">
                 <img src="/tvarumas/arrow-darkblue.svg" alt="arrow-darkblue">
               </a>
             </div>
@@ -437,17 +437,17 @@
  
 
       <div class="social">
-          <a href="#">Facebook</a>
-          <a href="#">Instagram</a>
-          <a href="#">LinkedIn</a>
-          <a href="#">Youtube</a>
+          <a href="#" class="next-page-link">Facebook</a>
+          <a href="#" class="next-page-link">Instagram</a>
+          <a href="#" class="next-page-link">LinkedIn</a>
+          <a href="#" class="next-page-link">Youtube</a>
       </div>
 
       <hr>
 
       <div class="copywrites">
         <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
-        <a href="privatumo-politika.html">Privatumo politika</a>
+        <a href="privatumo-politika.html" class="next-page-link">Privatumo politika</a>
     </div>
   </footer>
     </main>
@@ -490,6 +490,23 @@
       });
             
       });
+
+
+      document.addEventListener("DOMContentLoaded", function() { 
+         document.querySelectorAll('.next-page-link').forEach(link => {
+         link.addEventListener('click', function(e) {
+           e.preventDefault();
+           const url = this.href;
+   
+           gsap.to('#mainContent', {
+             opacity: 0,
+             duration: 1,
+             ease: "power3.inOut",
+             onComplete: () => window.location.href = url
+           });
+         });
+       });
+       })
     </script>
   </body>
 </html>
