--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -38,7 +38,7 @@
   <body>
     <!-- Navigation -->
     <header>
-        <a href="landing.html" class="logo">
+        <a href="landing.html" class="logo next-page-link">
           <img src="/svg/acme-dark-logo.svg" alt="">
         </a>
         <div class="right">
@@ -111,6 +111,23 @@
             </div>
         </section>
     </main>
-  
   </body>
 </html>
+<script type="module">
+  import gsap from "gsap";
+  document.addEventListener("DOMContentLoaded", function() { 
+     document.querySelectorAll('.next-page-link').forEach(link => {
+     link.addEventListener('click', function(e) {
+       e.preventDefault();
+       const url = this.href;
+
+       gsap.to('#mainContent', {
+         opacity: 0,
+         duration: 1,
+         ease: "power3.inOut",
+         onComplete: () => window.location.href = url
+       });
+     });
+   });
+   })
+</script>
