--- a/src/pages/naujienos.html
+++ b/src/pages/naujienos.html
@@ -35,7 +35,7 @@
   <body>
     <!-- Navigation -->
     <header>
-        <a href="landing.html" class="logo">
+        <a href="landing.html" class="logo next-page-link">
           <img src="/svg/acme-dark-logo.svg" alt="">
         </a>
         <div class="right">
@@ -216,17 +216,17 @@
        
 
             <div class="social">
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">Youtube</a>
+                <a href="#" class="next-page-link">Facebook</a>
+                <a href="#" class="next-page-link">Instagram</a>
+                <a href="#" class="next-page-link">LinkedIn</a>
+                <a href="#" class="next-page-link">Youtube</a>
             </div>
    
             <hr>
 
             <div class="copywrites">
               <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
-              <a href="privatumo-politika.html">Privatumo politika</a>
+              <a href="privatumo-politika.html" class="next-page-link">Privatumo politika</a>
           </div>
         </footer>
 
