--- a/src/pages/privatumo-politika.html
+++ b/src/pages/privatumo-politika.html
@@ -40,7 +40,7 @@
   <body>
     <!-- Navigation -->
     <header>
-        <a href="landing.html" class="logo">
+        <a href="landing.html" class="logo next-page-link">
           <img src="/svg/acme-dark-logo.svg" alt="">
         </a>
         <div class="right">
@@ -134,17 +134,17 @@
        
 
             <div class="social">
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">Youtube</a>
+                <a href="#" class="next-page-link">Facebook</a>
+                <a href="#" class="next-page-link">Instagram</a>
+                <a href="#" class="next-page-link">LinkedIn</a>
+                <a href="#" class="next-page-link">Youtube</a>
             </div>
    
             <hr>
 
             <div class="copywrites">
               <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
-              <a href="privatumo-politika.html">Privatumo politika</a>
+              <a href="privatumo-politika.html" class="next-page-link">Privatumo politika</a>
           </div>
         </footer>
 
@@ -182,7 +182,21 @@
         });
       });
 
-
+      document.addEventListener("DOMContentLoaded", function() { 
+         document.querySelectorAll('.next-page-link').forEach(link => {
+         link.addEventListener('click', function(e) {
+           e.preventDefault();
+           const url = this.href;
+   
+           gsap.to('#mainContent', {
+             opacity: 0,
+             duration: 1,
+             ease: "power3.inOut",
+             onComplete: () => window.location.href = url
+           });
+         });
+       });
+       })
   
       </script>
     </body>
