--- a/src/pages/veiklos-kryptys.html
+++ b/src/pages/veiklos-kryptys.html
@@ -98,7 +98,7 @@
                 <h1>Veiklos kryptys</h1>
                 <p>Porem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus.</p>
                 <p>Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.</p>
-                <a href="#" class="button next-page-link">Daugiau informacijos</a>
+                <a href="pagrindines-veiklos.html" class="button next-page-link">Daugiau informacijos</a>
             </div>
 
             <div class="content content-left">
@@ -123,7 +123,7 @@
                     <img src="/veiklos-kryptys/brand-2.svg" alt="brand-2">
                     <img src="/veiklos-kryptys/brand-3.svg" alt="brand-3">
                 </div>
-                <a href="#" class="button next-page-link">Daugiau informacijos</a>
+                <a href="verslo-inovaciju-labaratorija.html" class="button next-page-link">Daugiau informacijos</a>
             </div>
         </section>
 
