--- a/src/pages/karjera.html
+++ b/src/pages/karjera.html
@@ -199,7 +199,7 @@
           <p>Jorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. </p>
           <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. </p>
           <p>Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. </p>
-          <a class="button" href="mentoryste.html">Skaityti daugiau</a>
+          <a class="button next-page-link" href="mentoryste.html">Skaityti daugiau</a>
         </div>
 
         <img src="/images/activities-1.jpg" alt="" class="mentorship-image">
