pagrindines veiklos fix

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -104,7 +104,7 @@
     
             <div class="iniciatives">
               <h2>puslapis nerastas</h2>
-              <a class="go-back" href="landing.html">
+              <a class="go-back next-page-link" href="landing.html">
                 <img src="/svg/arrow-circle-right.svg" alt="">
                 <p>grįžti atgal</p>
               </a>
@@ -113,6 +113,7 @@
     </main>
   </body>
 </html>
+<script type="module" src="/src/scripts/navigation.js"></script>
 <script type="module">
   import gsap from "gsap";
   document.addEventListener("DOMContentLoaded", function() { 
