--- a/src/pages/karjera.html
+++ b/src/pages/karjera.html
@@ -94,6 +94,9 @@
     <main id="mainContent">
         <section class="section-1">
             <div class="shape-1"></div>
+            <div class="shape-2">
+              <img  src="/images/activities-3.jpg" alt="">
+            </div>
 
             <div class="content">
               <h1>Darbas Acme Grupėje</h1>
@@ -321,7 +324,10 @@
 
 
       <section class="acme-human">
+     
+
         <div class="content">
+            <img class="acme-shape" src="/images/activities-1.jpg" alt="activities-1" >
             <h2>Acme žmogus</h2>
             <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
@@ -360,6 +366,8 @@
         </div>
 
         <div class="content-2">
+          <div class="acme-shape"></div>
+
           <h3>Įdarbinio procesas</h3>
           <div class="steps">
             <div class="step">
@@ -382,6 +390,7 @@
         </div>
 
         <div class="content">
+          <img class="acme-shape" src="/images/activities-2.jpg" alt="activities-2" >
           <h2>Rekomendacija</h2>
           <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
           <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
@@ -389,6 +398,7 @@
       </div>
 
       <div class="content">
+        <img class="acme-shape" src="/images/activities-3.jpg" alt="activities-3" >
         <h2>Rekomendacija</h2>
         <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
         <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
