dar pora su media

--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -218,6 +218,9 @@
     </div>
 
     <section class="tech-education">
+    
+      <img class="tech-shape" src="/images/activities-2.jpg" alt="activities-2" >
+
       <div class="content">
         <h2>Technologinis švietimas</h2>
         <div class="projects">
