header color change

--- a/src/pages/tvarumas.html
+++ b/src/pages/tvarumas.html
@@ -313,6 +313,7 @@
     <script type="module" src="/src/scripts/navigation.js"></script>
     <script type="module" src="/src/scripts/tvarumas-tabs.js"></script>
     <script type="module" src="/src/scripts/animated-words.js"></script>
+    <script type="module" src="/src/scripts/header-collider-blue.js"></script>
     <script type="module">
       import gsap from "gsap";
       import ScrollTrigger from "gsap/ScrollTrigger";
