apie-mus update

--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -330,7 +330,7 @@
     <script type="module" src="/src/scripts/apie-mus-video.js"></script>
     <script type="module" src="/src/scripts/header-collider-green.js"></script>
     <!-- Loading animation -->
-    <script type="module">
+    <!-- <script type="module">
       import gsap from "gsap";
       import ScrollTrigger from "gsap/ScrollTrigger";
       gsap.registerPlugin(ScrollTrigger);
@@ -401,6 +401,6 @@
       });
       })
 
-    </script>
+    </script> -->
     </body>
 </html>
