footer target blank

--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -308,10 +308,10 @@
        
 
             <div class="social">
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">Youtube</a>
+                <a href="#" target="_blank">Facebook</a>
+                <a href="#" target="_blank">Instagram</a>
+                <a href="#" target="_blank">LinkedIn</a>
+                <a href="#" target="_blank">Youtube</a>
             </div>
    
             <hr>
