--- a/src/pages/tvarumas.html
+++ b/src/pages/tvarumas.html
@@ -122,7 +122,7 @@
       
     <section class="section-2">
         <p id="text-container" class="animated-opacity">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, dolore sit. Eligendi voluptatem rem modi dolorem ullam libero veniam aut laudantium dolorum ducimus labore, neque nesciunt quos, obcaecati similique rerum voluptatibus. Hic tempore, officia, praesentium nisi quidem molestiae omnis doloribus odio sit magni recusandae. Quisquam saepe incidunt aliquam a iure?
+          Corem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan.
           </p>
         <div class="tabs">
             <div class="tab tab-1">
