--- a/src/pages/verslo-inovaciju-labaratorija.html
+++ b/src/pages/verslo-inovaciju-labaratorija.html
@@ -199,11 +199,10 @@
           </clipPath>
           </defs>
         </svg>
-  
         <div class="contact-1">
             <p class="contact-title">Įmonės kontaktai</p>
-            <p>Tel. +370 37 333533</p>
-            <p>info@acmegrupe.lt</p>
+            <a href="tel:+37037333533" target="_blank">Tel. +370 37 333533</a>
+            <a href="mailto:info@acmegrupe.lt" target="_blank">info@acmegrupe.lt</a>
         </div>
   
   
@@ -221,16 +220,16 @@
         <div class="contact-2">
             <p class="contact-title">Kontaktai žiniasklaidai</p>
             <p>Komunikacijos vadovė</p>
-            <p>Simona.masalskiene@acme.lt</p>
-            <p>Mob.tel.: +37066997776</p>
+            <a href="mailto:Simona.masalskiene@acme.lt" target="_blank">Simona.masalskiene@acme.lt</a>
+            <a href="tel:+37066997776" target="_blank">Mob.tel.: +37066997776</a>
         </div>
    
   
         <div class="social">
-            <a href="#" class="next-page-link">Facebook</a>
-            <a href="#" class="next-page-link">Instagram</a>
-            <a href="#" class="next-page-link">LinkedIn</a>
-            <a href="#" class="next-page-link">Youtube</a>
+            <a href="#" target="_blank">Facebook</a>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">LinkedIn</a>
+            <a href="#" target="_blank">Youtube</a>
         </div>
   
         <hr>
