--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -416,7 +416,7 @@
           </a>
       </div>
     </section>
-  
+
     <footer>
       <svg  class="footer-forma" xmlns="http://www.w3.org/2000/svg" width="1625" height="501" viewBox="0 0 1625 501" fill="none">
         <path d="M1624.08 373.117C1639.32 161.898 1463.61 -13.7195 1252.29 1.52269C834.712 31.6251 417.134 61.7375 -0.433437 91.8399L-32 601.6H1607.58C1613.07 525.439 1618.58 449.278 1624.07 373.117H1624.08Z" fill="#15276A"/>
@@ -437,11 +437,10 @@
         </clipPath>
         </defs>
       </svg>
-
       <div class="contact-1">
           <p class="contact-title">Įmonės kontaktai</p>
-          <p>Tel. +370 37 333533</p>
-          <p>info@acmegrupe.lt</p>
+          <a href="tel:+37037333533" target="_blank">Tel. +370 37 333533</a>
+          <a href="mailto:info@acmegrupe.lt" target="_blank">info@acmegrupe.lt</a>
       </div>
 
 
@@ -459,16 +458,16 @@
       <div class="contact-2">
           <p class="contact-title">Kontaktai žiniasklaidai</p>
           <p>Komunikacijos vadovė</p>
-          <p>Simona.masalskiene@acme.lt</p>
-          <p>Mob.tel.: +37066997776</p>
+          <a href="mailto:Simona.masalskiene@acme.lt" target="_blank">Simona.masalskiene@acme.lt</a>
+          <a href="tel:+37066997776" target="_blank">Mob.tel.: +37066997776</a>
       </div>
  
 
       <div class="social">
-          <a href="#" class="next-page-link">Facebook</a>
-          <a href="#" class="next-page-link">Instagram</a>
-          <a href="#" class="next-page-link">LinkedIn</a>
-          <a href="#" class="next-page-link">Youtube</a>
+          <a href="#" target="_blank">Facebook</a>
+          <a href="#" target="_blank">Instagram</a>
+          <a href="#" target="_blank">LinkedIn</a>
+          <a href="#" target="_blank">Youtube</a>
       </div>
 
       <hr>
@@ -478,6 +477,7 @@
         <a href="privatumo-politika.html" class="next-page-link">Privatumo politika</a>
     </div>
   </footer>
+
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
